more func to weatherapi

--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,8 @@
         <div class="row">
             <div class="col-md-6 offset-md-3 border">
                <div class="waether-post" data-id=" {{postId}}">
-                    <p>{{name}}, in {{country}}</p>
-                    <p>the temperature is: {{temperature}}</p> 
+                    <p>{{cityName}}, in {{country}}</p>
+                    <p>the temperature is: {{currentTemp}}</p> 
                     <ul class="weatherComments">
                             {{#each comments}}
                             <li>{{commentText}}</li>
